<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rogden33.jeopardytrivia.FinalJeopardyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:textSize="30sp"
        android:text="@string/finalJeopardy_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/finalJeopardy_categoryLabel" />

    <TextView
        android:id="@+id/finalJeopardy_TextView_categoryDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gameBoard_title_loadingText"
        android:gravity="center"
        android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/finalJeopardy__scoreLabel" />

    <TextView
        android:id="@+id/finalJeopardy_TextView_scoreDisplay"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/finalJeopardy_wagerPrompt" />

    <EditText
        android:id="@+id/finalJeopardy_EditText_wagerEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/finalJeopardy_wagerHint"
        android:inputType="number"
        android:textColor="#ffdac863"
        android:textColorHint="#ffdac863"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/finalJeopardy_Button_submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/finalJeopardy_submitButtonLabel"
        android:background="@drawable/default_button_theme"
        android:onClick="submit" />

</LinearLayout>
