<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rogden33.jeopardytrivia.DailyDoubleActivity"
    android:orientation="vertical">

    <!-- Static daily double title label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:textSize="30sp"
        android:text="@string/dailyDouble_title"/>

    <!-- Static category label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dailyDouble_categoryLabel" />

    <!-- Category display -->
    <TextView
        android:id="@+id/dailyDouble_TextView_categoryDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="20dp"/>

    <!-- Static score label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dailyDouble_scoreLabel" />

    <!-- Score display -->
    <TextView
        android:id="@+id/dailyDouble_TextView_scoreDisplay"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>

    <!-- Static wager prompt -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dailyDouble_wagerPrompt" />

    <!-- Wager entry -->
    <EditText
        android:id="@+id/dailyDouble_EditText_wagerEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/finalJeopardy_wagerHint"
        android:inputType="number"
        android:textColor="#ffdac863"
        android:textColorHint="#ffdac863"/>

    <!-- Variable sized empty space to keep the button at the bottom -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Submit button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/dailyDouble_submitButtonLabel"
        android:background="@drawable/default_button_theme"
        android:onClick="submit" />

</LinearLayout>
