<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Static main menu title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mainMenu_activityTitle"
        android:textSize="30sp"/>

    <!-- Button to go to RandomQuestion activity -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_ButtonText_toRandomQuestions"
        android:onClick="randomOnClick"
        android:background="@drawable/default_button_theme"
        android:layout_margin="5dp" />

    <!-- View top scores button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_ButtonText_toViewScores"
        android:onClick="viewScoreOnClick"
        android:background="@drawable/default_button_theme"
        android:layout_margin="5dp"/>

    <!-- GameBoardActivity button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_ButtonText_toGameBoard"
        android:onClick="gameBoardOnClick"
        android:background="@drawable/default_button_theme"
        android:layout_margin="5dp"/>

    <!-- Show the username -->
    <TextView
        android:id="@+id/mainMenu_TextView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="5dp"/>

    <!-- Show the current score -->
    <TextView
        android:id="@+id/mainMenu_TextView_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="5dp"/>

    <!-- Keep the delete user button at the bottom -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Delete user button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="deleteUser"
        android:text="@string/mainMenu_menuItem_deleteUserText"
        android:background="@drawable/default_button_theme"
        android:layout_margin="5dp"/>
</LinearLayout>