<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Static category label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/singleClue_categoryLabel" />

    <!-- Category display -->
    <TextView
        android:id="@+id/singleClue_TextView_categoryDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="10dp" />

    <!-- Static clue label  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/singleClue_clueLabel" />

    <!-- Clue display -->
    <TextView
        android:id="@+id/singleClue_TextView_clueDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

    <!-- Scroll the buttons in the event they are very large -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Use a static 2x2 grid-like display with equal weight. The GridLayout was not able to
             nicely weight everything for me, hence this usage. -->
        <!-- Top row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Choice A -->
                <Button
                    android:id="@+id/singleClue_Button_choiceA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/default_button_theme"
                    android:textAllCaps="false" />

                <!-- Choice B -->
                <Button
                    android:id="@+id/singleClue_Button_choiceB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/default_button_theme"
                    android:textAllCaps="false" />
            </LinearLayout>

            <!-- Bottom row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Choice C -->
                <Button
                    android:id="@+id/singleClue_Button_choiceC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/default_button_theme"
                    android:textAllCaps="false" />

                <!-- Choice D -->
                <Button
                    android:id="@+id/singleClue_Button_choiceD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/default_button_theme"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Keep prize display centered -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Static clue value label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singleClue_prizeLabel"
                    android:textSize="20sp" />

                <!-- Clue value display -->
                <TextView
                    android:id="@+id/singleClue_TextView_prizeDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

                <!-- Keep prize display centered -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Keep score display centered -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Static score label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singleClue_scoreLabel"
                    android:textSize="20sp" />

                <!-- Score display -->
                <TextView
                    android:id="@+id/singleClue_TextView_scoreDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

                <!-- Keep score display centered -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>